website/websites/u32q/code/threadring.1.gcc.log

Tue, 28 Apr 2015 20:55:51 GMT

MAKE:
/usr/bin/gcc -pipe -Wall -O3 -fomit-frame-pointer -march=native -pthread -std=c99 threadring.c -o threadring.gcc_run 
threadring.c:17:11: error: ‘PTHREAD_STACK_MIN’ undeclared here (not in a function)
    char x[PTHREAD_STACK_MIN];
           ^
threadring.c: In function ‘main’:
threadring.c:66:7: warning: implicit declaration of function ‘pthread_attr_setstack’ [-Wimplicit-function-declaration]
       pthread_attr_setstack(&stack_attr, &stacks[i], sizeof(struct stack)); 
       ^
/home/dunham/benchmarksgame/nanobench/makefiles/u32q.programs.Makefile:56: recipe for target 'threadring.gcc_run' failed
make: [threadring.gcc_run] Error 1 (ignored)
rm threadring.c
0.07s to complete and log all make actions

COMMAND LINE:
./threadring.gcc_run 500000

MAKE ERROR 

